fixed picture too small

--- a/src/pages/styles/about.module.css
+++ b/src/pages/styles/about.module.css
@@ -50,7 +50,7 @@
 
   .image {
     max-width: 100%;
-    min-height: 35vh;
+    min-height: 50vh;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
   }
